build/log/idf_py_stdout_output_1306747
[1/9] Performing build step for 'bootloader'
[1/1] cd /home/ynghia/CODE/IDF/vinfast/build/bootloader/esp-idf/esptool_py && /home/ynghia/.espressif/python_env/idf5.1_py3.8_env/bin/python /home/ynghia/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/ynghia/CODE/IDF/vinfast/build/bootloader/bootloader.bin
Bootloader binary size 0x6870 bytes. 0x790 bytes (7%) free.
[2/7] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
/home/ynghia/.espressif/tools/xtensa-esp32-elf/esp-12.2.0_20230208/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.1.4-52-g978d574e5e-dirty\" -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -Iconfig -I../main -I/home/ynghia/esp/esp-idf/components/newlib/platform_include -I/home/ynghia/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/ynghia/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/ynghia/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/home/ynghia/esp/esp-idf/components/freertos/esp_additions/include -I/home/ynghia/esp/esp-idf/components/freertos/esp_additions/arch/xtensa/include -I/home/ynghia/esp/esp-idf/components/esp_hw_support/include -I/home/ynghia/esp/esp-idf/components/esp_hw_support/include/soc -I/home/ynghia/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/ynghia/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/ynghia/esp/esp-idf/components/heap/include -I/home/ynghia/esp/esp-idf/components/log/include -I/home/ynghia/esp/esp-idf/components/soc/include -I/home/ynghia/esp/esp-idf/components/soc/esp32 -I/home/ynghia/esp/esp-idf/components/soc/esp32/include -I/home/ynghia/esp/esp-idf/components/hal/esp32/include -I/home/ynghia/esp/esp-idf/components/hal/include -I/home/ynghia/esp/esp-idf/components/hal/platform_port/include -I/home/ynghia/esp/esp-idf/components/esp_rom/include -I/home/ynghia/esp/esp-idf/components/esp_rom/include/esp32 -I/home/ynghia/esp/esp-idf/components/esp_rom/esp32 -I/home/ynghia/esp/esp-idf/components/esp_common/include -I/home/ynghia/esp/esp-idf/components/esp_system/include -I/home/ynghia/esp/esp-idf/components/esp_system/port/soc -I/home/ynghia/esp/esp-idf/components/esp_system/port/include/private -I/home/ynghia/esp/esp-idf/components/xtensa/include -I/home/ynghia/esp/esp-idf/components/xtensa/esp32/include -I/home/ynghia/esp/esp-idf/components/lwip/include -I/home/ynghia/esp/esp-idf/components/lwip/include/apps -I/home/ynghia/esp/esp-idf/components/lwip/include/apps/sntp -I/home/ynghia/esp/esp-idf/components/lwip/lwip/src/include -I/home/ynghia/esp/esp-idf/components/lwip/port/include -I/home/ynghia/esp/esp-idf/components/lwip/port/freertos/include -I/home/ynghia/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/ynghia/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/ynghia/esp/esp-idf/components/mbedtls/port/include -I/home/ynghia/esp/esp-idf/components/mbedtls/mbedtls/include -I/home/ynghia/esp/esp-idf/components/mbedtls/mbedtls/library -I/home/ynghia/esp/esp-idf/components/mbedtls/esp_crt_bundle/include -I/home/ynghia/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/everest/include -I/home/ynghia/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m -I/home/ynghia/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m/p256-m -I/home/ynghia/esp/esp-idf/components/nvs_flash/include -I/home/ynghia/esp/esp-idf/components/esp_partition/include -I/home/ynghia/esp/esp-idf/components/spi_flash/include -I../components/app_wifi/include -I/home/ynghia/esp/esp-idf/components/esp_event/include -I../components/app_request_https/include -I../components/app_get_realtime/include -I/home/ynghia/esp/esp-idf/components/esp_netif/include -I../components/common_nvs/include -I../components/app_handle_query/include -I../components/driver_sleep_mode/include -I/home/ynghia/esp/esp-idf/components/driver/include -I/home/ynghia/esp/esp-idf/components/driver/deprecated -I/home/ynghia/esp/esp-idf/components/driver/analog_comparator/include -I/home/ynghia/esp/esp-idf/components/driver/dac/include -I/home/ynghia/esp/esp-idf/components/driver/gpio/include -I/home/ynghia/esp/esp-idf/components/driver/gptimer/include -I/home/ynghia/esp/esp-idf/components/driver/i2c/include -I/home/ynghia/esp/esp-idf/components/driver/i2s/include -I/home/ynghia/esp/esp-idf/components/driver/ledc/include -I/home/ynghia/esp/esp-idf/components/driver/mcpwm/include -I/home/ynghia/esp/esp-idf/components/driver/parlio/include -I/home/ynghia/esp/esp-idf/components/driver/pcnt/include -I/home/ynghia/esp/esp-idf/components/driver/rmt/include -I/home/ynghia/esp/esp-idf/components/driver/sdio_slave/include -I/home/ynghia/esp/esp-idf/components/driver/sdmmc/include -I/home/ynghia/esp/esp-idf/components/driver/sigma_delta/include -I/home/ynghia/esp/esp-idf/components/driver/spi/include -I/home/ynghia/esp/esp-idf/components/driver/temperature_sensor/include -I/home/ynghia/esp/esp-idf/components/driver/touch_sensor/include -I/home/ynghia/esp/esp-idf/components/driver/twai/include -I/home/ynghia/esp/esp-idf/components/driver/uart/include -I/home/ynghia/esp/esp-idf/components/driver/usb_serial_jtag/include -I/home/ynghia/esp/esp-idf/components/driver/touch_sensor/esp32/include -I/home/ynghia/esp/esp-idf/components/esp_pm/include -I/home/ynghia/esp/esp-idf/components/esp_ringbuf/include -I../components/common/include -I../components/app_handle_wifi_mode_sta/include -I../components/driver_gpio/include -I../components/admin_into_setup/include -I../components/admin_menu_congfi/include -I/home/ynghia/esp/esp-idf/components/esp_http_server/include -I/home/ynghia/esp/esp-idf/components/http_parser -I/home/ynghia/esp/esp-idf/components/esp_eth/include -I/home/ynghia/esp/esp-idf/components/esp_wifi/include -I/home/ynghia/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/home/ynghia/esp/esp-idf/components/esp_phy/include -I/home/ynghia/esp/esp-idf/components/esp_phy/esp32/include -I/home/ynghia/esp/esp-idf/components/esp-tls -I/home/ynghia/esp/esp-idf/components/esp-tls/esp-tls-crypto -mlongcalls -Wno-frame-address    -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/ynghia/CODE/IDF/vinfast=. -fmacro-prefix-map=/home/ynghia/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj   -c ../main/main.c
../main/main.c: In function 'task_check_setup':
../main/main.c:23:24: error: 'return' with a value, in function returning void [-Werror=return-type]
   23 |                 return false;
      |                        ^~~~~
../main/main.c:12:6: note: declared here
   12 | void task_check_setup(void *pra)
      |      ^~~~~~~~~~~~~~~~
../main/main.c:25:47: warning: passing argument 3 of 'nvs_set_i8' makes integer from pointer without a cast [-Wint-conversion]
   25 |             nvs_set_i8(config, "FLAG_CONFIG", &flag_reset);
      |                                               ^~~~~~~~~~~
      |                                               |
      |                                               _Bool *
In file included from /home/ynghia/esp/esp-idf/components/nvs_flash/include/nvs_flash.h:21,
                 from ../main/main.c:7:
/home/ynghia/esp/esp-idf/components/nvs_flash/include/nvs.h:199:68: note: expected 'int8_t' {aka 'signed char'} but argument is of type '_Bool *'
  199 | esp_err_t nvs_set_i8 (nvs_handle_t handle, const char* key, int8_t value);
      |                                                             ~~~~~~~^~~~~
cc1: some warnings being treated as errors
ninja: build stopped: subcommand failed.
